[gd_scene load_steps=16 format=3 uid="uid://covpsece2w44w"]

[ext_resource type="Script" uid="uid://f84p234jppab" path="res://Scenes/Enemies/enemy_light.gd" id="1_bkui8"]
[ext_resource type="Texture2D" uid="uid://6f3uedw52kxa" path="res://Art/Enemies/Enemy_Light.png" id="1_waqdm"]
[ext_resource type="PackedScene" uid="uid://b4c17usa6vwgb" path="res://Scenes/Components/sfx_player.tscn" id="2_1gmkm"]
[ext_resource type="PackedScene" uid="uid://dfhqaaeia38w3" path="res://Scenes/Components/health_component.tscn" id="3_omyh5"]
[ext_resource type="PackedScene" uid="uid://ytjc2hipjs3m" path="res://Scenes/Components/exp_distributor.tscn" id="3_xxl0h"]
[ext_resource type="Texture2D" uid="uid://rj267cq2gjua" path="res://Art/Enemies/Enemy_FX_Explosion.png" id="4_omyh5"]
[ext_resource type="PackedScene" uid="uid://c0u3cka7lnwdw" path="res://Scenes/Misc/fx_smoke.tscn" id="5_yeqv2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5aft"]
size = Vector2(20, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeqv2"]
atlas = ExtResource("4_omyh5")
region = Rect2(0, 0, 24, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gmkm"]
atlas = ExtResource("4_omyh5")
region = Rect2(24, 0, 24, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxl0h"]
atlas = ExtResource("4_omyh5")
region = Rect2(48, 0, 24, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmc1t"]
atlas = ExtResource("4_omyh5")
region = Rect2(0, 21, 24, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhkf1"]
atlas = ExtResource("4_omyh5")
region = Rect2(24, 21, 24, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_slgla"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeqv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gmkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxl0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmc1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhkf1")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"SmallExplosion",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1gmkm"]
size = Vector2(16, 10)

[node name="EnemyLight" type="Node2D" groups=["Enemy"]]
script = ExtResource("1_bkui8")

[node name="SfxPlayer" parent="." instance=ExtResource("2_1gmkm")]

[node name="ExpDistributor" parent="." instance=ExtResource("3_xxl0h")]
exp_amount = 3

[node name="ShipSprite" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("1_waqdm")

[node name="Flash" type="ColorRect" parent="ShipSprite"]
visible = false
modulate = Color(1, 1, 1, 0.623529)
offset_left = -10.0
offset_top = -7.0
offset_right = 11.0
offset_bottom = 7.0

[node name="HealthComponent" parent="." instance=ExtResource("3_omyh5")]
max_health = 10

[node name="EnemyHurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtBox"]
shape = SubResource("RectangleShape2D_t5aft")
debug_color = Color(0.999465, 0, 0.112206, 0.42)

[node name="FlashRecover" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.65
autostart = true

[node name="BulletSpawnPos" type="Marker2D" parent="."]
position = Vector2(-7, 5)

[node name="ExplosionSprites" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_slgla")
animation = &"SmallExplosion"

[node name="Smoke" parent="." instance=ExtResource("5_yeqv2")]

[node name="EnemyHitBox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBox"]
shape = SubResource("RectangleShape2D_1gmkm")

[connection signal="area_entered" from="EnemyHurtBox" to="." method="_on_enemy_hurt_box_area_entered"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
